--- a/25c3659/25c3659_vs_adffe19.md
+++ b/25c3659/25c3659_vs_adffe19.md
@@ -4,9 +4,9 @@
 
 *Commit(s):* [jrevels/julia@25c3659](https://github.com/jrevels/julia/commit/25c3659d6cec2ebf6e6c7d16b03adac76a47b42a) vs [JuliaLang/julia@adffe19](https://github.com/JuliaLang/julia/commit/adffe19dfb704444789429bffa51f4e05b386125)
 
-*Tag Predicate:* `"arrays" && "indexing"`
+*Tag Predicate:* `"arrays" && !("small" || "Float")`
 
-*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-168087826)
+*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#discussion_r48678781)
 
 ## Results
 
@@ -23,180 +23,52 @@ applied when passing judgment on these results. For convenience, "failing" resul
 
 | Benchmark ID | time | % of time spent in GC | bytes allocated | number of allocations |
 |--------------|------|-----------------------|-----------------|-----------------------|
-| `(:sumlinear,"Array{Float32,2}",100000)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumlinear,"Array{Float32,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100)` | 0.67 | 1.0 | 1.0 | 1.0 |
-| `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100000)` | 0.96 | 1.0 | 1.0 | 1.0 |
-| `(:sumrange,"BitArray{2}",100)` | **3.71 {F}** | 0.33 | **1.13 {F}** | **1.17 {F}** |
-| `(:sumlinear,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 0.97 | 0.98 | 1.0 | 1.0 |
-| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100)` | 0.99 | 1.0 | 1.0 | 1.0 |
-| `(:sumeach,"Array{Int64,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100000)` | **3.46 {F}** | 0.37 | **1.27 {F}** | **1.5 {F}** |
-| `(:sumvector,"Array{Int64,2}",100000)` | **3.88 {F}** | 0.38 | **1.37 {F}** | **2.0 {F}** |
-| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100000)` | 0.96 | 1.0 | 1.0 | 1.0 |
-| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100000)` | 1.02 | 1.0 | 1.0 | 1.0 |
-| `(:sumcartesian,"Array{Int64,2}",100)` | 0.79 | 1.0 | 1.0 | 1.0 |
-| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100)` | **1.91 {F}** | 0.58 | 1.02 | **1.4 {F}** |
-| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100000)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumcolon,"Array{Int64,2}",100000)` | 0.92 | 1.03 | 1.0 | 1.0 |
-| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100000)` | **3.82 {F}** | 0.47 | **1.43 {F}** | **2.0 {F}** |
-| `(:sumeach,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 0.91 | 1.0 | 1.0 | 1.0 |
-| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100)` | **1.75 {F}** | 0.59 | 1.02 | **1.5 {F}** |
-| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100000)` | 1.03 | 1.0 | 1.0 | 1.0 |
-| `(:sumlinear,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 0.98 | 0.98 | 1.0 | 1.0 |
-| `(:sumlogical,"BitArray{2}",100)` | **1.25 {F}** | 0.88 | 1.06 | **1.5 {F}** |
-| `(:sumvector,"Array{Float32,2}",100000)` | **3.77 {F}** | 0.48 | **1.43 {F}** | **2.0 {F}** |
-| `(:sumvector,"Array{Float32,2}",100)` | **3.47 {F}** | 0.65 | **1.43 {F}** | **2.0 {F}** |
-| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100000)` | 0.98 | 1.02 | 1.0 | 1.0 |
-| `(:sumelt,"Array{Int64,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumcartesian,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 0.95 | 1.0 | 1.0 | 1.0 |
-| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100000)` | **3.45 {F}** | 0.4 | **1.27 {F}** | **1.67 {F}** |
-| `(:sumcolon,"Array{Float32,2}",100000)` | 0.93 | 1.08 | 1.0 | 1.0 |
-| `(:sumcolon,"Array{Float32,2}",100)` | **1.18 {F}** | 0.84 | 1.0 | 1.0 |
-| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100)` | **3.16 {F}** | 0.67 | **1.37 {F}** | **1.67 {F}** |
-| `(:sumvector,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 0.95 | 0.99 | 1.0 | 1.0 |
-| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100)` | **1.46 {F}** | 0.75 | 1.03 | **1.5 {F}** |
-| `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100)` | 1.06 | 1.0 | 1.0 | 1.0 |
-| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100000)` | **3.69 {F}** | 0.39 | **1.37 {F}** | **2.0 {F}** |
-| `(:sumelt,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 1.01 | 1.0 | 1.0 | 1.0 |
-| `(:sumlinear,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 0.99 | 1.0 | 1.0 | 1.0 |
-| `(:sumcolon,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 1.0 | 0.99 | 1.0 | 1.0 |
-| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100)` | **1.97 {F}** | 0.5 | 1.0 | 1.0 |
-| `(:sumeach,"BitArray{2}",100000)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100)` | **1.48 {F}** | 0.74 | 1.04 | **1.67 {F}** |
-| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100)` | 0.79 | 1.0 | 1.0 | 1.0 |
-| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100000)` | **3.51 {F}** | 0.51 | **1.43 {F}** | **2.0 {F}** |
-| `(:sumrange,"Array{Int64,2}",100000)` | **3.5 {F}** | 0.37 | **1.27 {F}** | **1.5 {F}** |
-| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100000)` | 0.91 | 1.06 | 1.0 | 1.0 |
-| `(:sumcartesian,"BitArray{2}",100000)` | 1.08 | 1.0 | 1.0 | 1.0 |
-| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100000)` | 0.96 | 1.0 | 1.0 | 1.0 |
-| `(:sumvector,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 0.93 | 1.0 | 1.0 | 1.0 |
-| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100000)` | 0.94 | 1.08 | 1.0 | 1.0 |
-| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100000)` | **2.87 {F}** | 0.43 | **1.3 {F}** | **1.5 {F}** |
-| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumcolon,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 0.98 | 0.98 | 1.0 | 1.0 |
-| `(:sumrange,"Array{Float32,2}",100000)` | **2.93 {F}** | 0.42 | **1.3 {F}** | **1.5 {F}** |
-| `(:sumrange,"Array{Float32,2}",100)` | **1.49 {F}** | 0.73 | 1.03 | **1.5 {F}** |
-| `(:sumelt,"BitArray{2}",100000)` | 0.98 | 1.0 | 1.0 | 1.0 |
-| `(:sumlogical,"Array{Int64,2}",100000)` | **3.41 {F}** | 0.41 | **1.27 {F}** | **1.67 {F}** |
-| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100)` | **3.54 {F}** | 0.5 | **1.37 {F}** | **2.0 {F}** |
-| `(:sumvector,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 0.94 | 1.0 | 1.0 | 1.0 |
-| `(:sumrange,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100)` | **1.82 {F}** | 0.6 | 1.03 | **1.4 {F}** |
+| `(:sumlinear,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 0.97 | 1.05 | 1.0 | 1.0 |
+| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100)` | 0.97 | 1.0 | 1.0 | 1.0 |
+| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100)` | 0.95 | 1.0 | 1.0 | 1.0 |
+| `(:sumrange,"BitArray{2}",100)` | **2.55 {F}** | 0.4 | **1.13 {F}** | **1.17 {F}** |
+| `(:sumeach,"Array{Int64,2}",100)` | 1.01 | 1.0 | 1.0 | 1.0 |
+| `(:sumrange,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 0.95 | 1.01 | 1.0 | 1.0 |
+| `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
+| `(:sumvector,"Array{Int64,2}",100)` | **4.09 {F}** | 0.46 | **1.37 {F}** | **2.0 {F}** |
+| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100)` | 0.96 | 1.0 | 1.0 | 1.0 |
+| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100)` | **3.89 {F}** | 0.46 | **1.37 {F}** | **2.0 {F}** |
+| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100)` | **1.89 {F}** | 0.56 | 1.02 | **1.4 {F}** |
+| `(:sumcartesian,"Array{Int64,2}",100)` | 0.77 | 1.0 | 1.0 | 1.0 |
+| `(:sumlogical,"Array{Int64,2}",100)` | **1.49 {F}** | 0.82 | 1.04 | **1.67 {F}** |
+| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100)` | **1.24 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100)` | **1.52 {F}** | 0.81 | 1.04 | **1.67 {F}** |
 | `(:sumeach,"BitArray{2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100000)` | 0.79 | 1.0 | 1.0 | 1.0 |
-| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100)` | **1.42 {F}** | 0.73 | 1.0 | 1.0 |
-| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100000)` | **3.07 {F}** | 0.46 | **1.27 {F}** | **1.67 {F}** |
-| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100000)` | **3.31 {F}** | 0.39 | **1.27 {F}** | **1.5 {F}** |
-| `(:sumcolon,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 0.98 | 0.97 | 1.0 | 1.0 |
+| `(:sumcolon,"Array{Int64,2}",100)` | 0.9 | 0.9 | 1.0 | 1.0 |
+| `(:sumeach,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 1.03 | 1.0 | 1.0 | 1.0 |
+| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100)` | **1.24 {F}** | 0.71 | 1.0 | 1.0 |
+| `(:sumvector,"BitArray{2}",100)` | **2.01 {F}** | 0.77 | **1.37 {F}** | **1.67 {F}** |
+| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100)` | **1.74 {F}** | 0.6 | 1.02 | **1.5 {F}** |
 | `(:sumcartesian,"BitArray{2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100000)` | **3.62 {F}** | 0.37 | **1.33 {F}** | **1.67 {F}** |
-| `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100)` | 0.97 | 1.0 | 1.0 | 1.0 |
-| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100000)` | 1.01 | 1.0 | 1.0 | 1.0 |
-| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100000)` | **2.8 {F}** | 0.43 | **1.3 {F}** | **1.5 {F}** |
-| `(:sumlogical,"Array{Float32,2}",100000)` | **2.65 {F}** | 0.51 | **1.27 {F}** | **1.67 {F}** |
-| `(:sumlogical,"Array{Float32,2}",100)` | **1.35 {F}** | 0.81 | 1.04 | **1.67 {F}** |
-| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100)` | **1.28 {F}** | 1.0 | 1.0 | 1.0 |
-| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100000)` | 0.9 | 1.07 | 1.0 | 1.0 |
-| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100000)` | 0.99 | 1.0 | 1.0 | 1.0 |
-| `(:sumrange,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 0.95 | 0.98 | 1.0 | 1.0 |
+| `(:sumlogical,"BitArray{2}",100)` | **1.44 {F}** | 0.85 | 1.06 | **1.5 {F}** |
+| `(:sumvector,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 0.95 | 1.04 | 1.0 | 1.0 |
+| `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100)` | 0.98 | 1.0 | 1.0 | 1.0 |
+| `(:sumelt,"Array{Int64,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
+| `(:sumcartesian,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | **1.15 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumlogical,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 1.1 | 1.03 | 1.0 | 1.0 |
+| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
+| `(:sumcolon,"BitArray{2}",100)` | **3.49 {F}** | 0.3 | 0.91 | 0.75 |
+| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100)` | **3.86 {F}** | 0.49 | **1.33 {F}** | **1.67 {F}** |
+| `(:sumcolon,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 1.0 | 0.97 | 1.0 | 1.0 |
+| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100)` | **1.19 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100)` | **1.5 {F}** | 0.81 | 1.03 | **1.5 {F}** |
 | `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100)` | 0.98 | 1.0 | 1.0 | 1.0 |
-| `(:sumlogical,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 1.05 | 0.96 | 1.0 | 1.0 |
-| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100)` | **1.48 {F}** | 0.75 | 1.04 | **1.5 {F}** |
 | `(:sumelt,"BitArray{2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
 | `(:sumlinear,"Array{Int64,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100000)` | 0.87 | 1.0 | 1.0 | 1.0 |
-| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100)` | 0.98 | 1.0 | 1.0 | 1.0 |
-| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100000)` | **3.23 {F}** | 0.43 | **1.27 {F}** | **1.67 {F}** |
-| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100)` | **1.21 {F}** | 1.0 | 1.0 | 1.0 |
-| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100000)` | **2.59 {F}** | 0.53 | **1.27 {F}** | **1.67 {F}** |
-| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100)` | **1.76 {F}** | 0.57 | 1.02 | **1.5 {F}** |
-| `(:sumrange,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 0.98 | 0.97 | 1.0 | 1.0 |
-| `(:sumlinear,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 0.98 | 1.0 | 1.0 | 1.0 |
-| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100)` | **3.21 {F}** | 0.7 | **1.43 {F}** | **2.0 {F}** |
-| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100)` | 0.98 | 1.0 | 1.0 | 1.0 |
-| `(:sumlogical,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 0.94 | 1.0 | 1.0 | 1.0 |
-| `(:sumeach,"Array{Int64,2}",100000)` | **1.13 {F}** | 1.0 | 1.0 | 1.0 |
-| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100)` | **1.43 {F}** | 0.7 | 1.0 | 1.0 |
-| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100000)` | **3.35 {F}** | 0.51 | **1.37 {F}** | **1.67 {F}** |
-| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100000)` | **3.09 {F}** | 0.42 | **1.25 {F}** | **1.4 {F}** |
-| `(:sumvector,"Array{Int64,2}",100)` | **3.74 {F}** | 0.51 | **1.37 {F}** | **2.0 {F}** |
-| `(:sumcartesian,"Array{Int64,2}",100000)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100)` | 0.99 | 1.0 | 1.0 | 1.0 |
-| `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100000)` | 1.02 | 1.0 | 1.0 | 1.0 |
-| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100000)` | 0.9 | 1.02 | 1.0 | 1.0 |
-| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100)` | **1.46 {F}** | 0.75 | 1.04 | **1.67 {F}** |
-| `(:sumlogical,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 0.92 | 1.04 | 1.0 | 1.0 |
-| `(:sumlinear,"BitArray{2}",100000)` | 0.98 | 1.0 | 1.0 | 1.0 |
-| `(:sumcolon,"Array{Int64,2}",100)` | 1.09 | 0.77 | 1.0 | 1.0 |
-| `(:sumeach,"Array{Float32,2}",100000)` | 0.98 | 1.0 | 1.0 | 1.0 |
-| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100000)` | 0.84 | 1.0 | 1.0 | 1.0 |
-| `(:sumeach,"Array{Float32,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumvector,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 0.95 | 1.08 | 1.0 | 1.0 |
-| `(:sumelt,"Array{Int64,2}",100000)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumcartesian,"Array{Float32,2}",100000)` | **1.15 {F}** | 1.0 | 1.0 | 1.0 |
-| `(:sumcartesian,"Array{Float32,2}",100)` | 1.01 | 1.0 | 1.0 | 1.0 |
-| `(:sumeach,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100000)` | **3.26 {F}** | 0.43 | **1.25 {F}** | **1.5 {F}** |
-| `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumcolon,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 1.01 | 0.97 | 1.0 | 1.0 |
-| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100000)` | 0.99 | 1.0 | 1.0 | 1.0 |
-| `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100000)` | 0.94 | 1.0 | 1.0 | 1.0 |
-| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100)` | **1.72 {F}** | 0.63 | 1.03 | **1.5 {F}** |
-| `(:sumcartesian,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumelt,"Array{Float32,2}",100000)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100000)` | 1.02 | 1.0 | 1.0 | 1.0 |
-| `(:sumelt,"Array{Float32,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100)` | **3.44 {F}** | 0.64 | **1.43 {F}** | **2.0 {F}** |
-| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100000)` | 1.02 | 1.0 | 1.0 | 1.0 |
-| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100000)` | **2.56 {F}** | 0.47 | **1.27 {F}** | **1.4 {F}** |
-| `(:sumvector,"BitArray{2}",100000)` | **1.47 {F}** | 0.99 | **1.37 {F}** | **1.67 {F}** |
-| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100000)` | 0.97 | 1.0 | 1.0 | 1.0 |
-| `(:sumeach,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 0.99 | 1.0 | 1.0 | 1.0 |
-| `(:sumrange,"Array{Int64,2}",100)` | **1.61 {F}** | 0.63 | 1.02 | **1.5 {F}** |
+| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100)` | **1.43 {F}** | 0.65 | 1.0 | 1.0 |
+| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100)` | 1.01 | 1.0 | 1.0 | 1.0 |
+| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100)` | **3.86 {F}** | 0.45 | **1.37 {F}** | **2.0 {F}** |
+| `(:sumelt,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | **1.21 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100)` | 1.04 | 1.0 | 1.0 | 1.0 |
+| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100)` | **1.5 {F}** | 0.82 | 1.04 | **1.67 {F}** |
+| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100)` | 0.76 | 1.0 | 1.0 | 1.0 |
+| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100)` | **1.22 {F}** | 0.73 | 1.0 | 1.0 |
+| `(:sumrange,"Array{Int64,2}",100)` | **1.59 {F}** | 0.65 | 1.02 | **1.5 {F}** |
 | `(:sumlinear,"BitArray{2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumelt,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100)` | **1.39 {F}** | 0.71 | 1.0 | 1.0 |
-| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100)` | 1.01 | 1.0 | 1.0 | 1.0 |
-| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100000)` | 0.94 | 1.0 | 1.0 | 1.0 |
-| `(:sumcartesian,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 0.99 | 1.0 | 1.0 | 1.0 |
-| `(:sumcolon,"BitArray{2}",100000)` | 0.62 | **1.51 {F}** | 1.0 | 1.0 |
-| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100000)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100)` | **1.4 {F}** | 0.78 | 1.04 | **1.67 {F}** |
-| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100)` | 0.96 | 1.0 | 1.0 | 1.0 |
-| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100000)` | 0.99 | 1.0 | 1.0 | 1.0 |
-| `(:sumrange,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 0.99 | 1.02 | 1.0 | 1.0 |
-| `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100)` | 0.99 | 1.0 | 1.0 | 1.0 |
-| `(:sumeach,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 1.02 | 1.0 | 1.0 | 1.0 |
-| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100000)` | **2.49 {F}** | 0.53 | **1.25 {F}** | **1.5 {F}** |
-| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100)` | 0.94 | 1.0 | 1.0 | 1.0 |
-| `(:sumelt,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumlogical,"Array{Int64,2}",100)` | **1.43 {F}** | 0.76 | 1.04 | **1.67 {F}** |
-| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100)` | **1.19 {F}** | 1.0 | 1.0 | 1.0 |
-| `(:sumcartesian,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 0.94 | 1.0 | 1.0 | 1.0 |
-| `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100000)` | 0.79 | 1.0 | 1.0 | 1.0 |
-| `(:sumvector,"BitArray{2}",100)` | **1.47 {F}** | 1.04 | **1.37 {F}** | **1.67 {F}** |
-| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100)` | **1.73 {F}** | 0.62 | 1.03 | **1.5 {F}** |
-| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100000)` | **3.96 {F}** | 0.37 | **1.37 {F}** | **2.0 {F}** |
-| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100000)` | 1.03 | 1.0 | 1.0 | 1.0 |
-| `(:sumlogical,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 1.04 | 0.98 | 1.0 | 1.0 |
-| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumrange,"BitArray{2}",100000)` | **1.12 {F}** | 1.1 | **1.25 {F}** | **1.4 {F}** |
-| `(:sumcolon,"BitArray{2}",100)` | **3.24 {F}** | 0.32 | 0.91 | 0.75 |
-| `(:sumelt,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 1.08 | 1.0 | 1.0 | 1.0 |
-| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100)` | **3.43 {F}** | 0.5 | **1.33 {F}** | **1.67 {F}** |
-| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100000)` | 0.97 | 1.0 | 1.0 | 1.0 |
-| `(:sumlinear,"Array{Int64,2}",100000)` | 0.99 | 1.0 | 1.0 | 1.0 |
-| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100)` | **1.42 {F}** | 0.76 | 1.0 | 1.0 |
-| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100)` | **3.74 {F}** | 0.48 | **1.37 {F}** | **2.0 {F}** |
-| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100000)` | 0.99 | 1.0 | 1.0 | 1.0 |
-| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100)` | **1.54 {F}** | 0.71 | 1.04 | **1.67 {F}** |
-| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100000)` | 0.99 | 1.0 | 1.0 | 1.0 |
-| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100)` | **1.41 {F}** | 0.81 | 1.0 | 1.0 |
-| `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumlogical,"BitArray{2}",100000)` | **1.51 {F}** | 0.87 | **1.23 {F}** | **1.5 {F}** |
+| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100)` | **1.74 {F}** | 0.61 | 1.02 | **1.5 {F}** |
 
