add summary report for job: jrevels/julia@3243eb1 vs JuliaLang/julia@c70ab26

--- a/3243eb1/3243eb1_vs_c70ab26.md
+++ b/3243eb1/3243eb1_vs_c70ab26.md
@@ -4,9 +4,9 @@
 
 *Commit(s):* [jrevels/julia@3243eb1](https://github.com/jrevels/julia/commit/3243eb1c21947be1828dc8a8c14256f390e60230) vs [JuliaLang/julia@c70ab26](https://github.com/JuliaLang/julia/commit/c70ab26bb677c92f0d8e0ae41c3035217a4b111f)
 
-*Tag Predicate:* `"array"`
+*Tag Predicate:* `"arrays"`
 
-*Triggered By:* [link](https://github.com/jrevels/julia/commit/3243eb1c21947be1828dc8a8c14256f390e60230#commitcomment-15236196)
+*Triggered By:* [link](https://github.com/jrevels/julia/commit/3243eb1c21947be1828dc8a8c14256f390e60230#commitcomment-15236765)
 
 ## Results
 
@@ -24,4 +24,180 @@ an **{F}**.
 
 | Benchmark ID | time | % of time spent in GC | bytes allocated | number of allocations |
 |--------------|------|-----------------------|-----------------|-----------------------|
+| `(:sumlinear,"Array{Float32,2}",100000)` | 0.98 | 1.0 | 1.0 | 1.0 |
+| `(:sumlinear,"Array{Float32,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
+| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100)` | **1.28 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100000)` | **1.26 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumrange,"BitArray{2}",100)` | 1.0 | 1.06 | 1.0 | 1.0 |
+| `(:sumlinear,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 1.04 | 0.97 | 1.0 | 1.0 |
+| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100)` | **1.17 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumeach,"Array{Int64,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
+| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100000)` | 1.03 | 1.0 | 1.0 | 1.0 |
+| `(:sumvector,"Array{Int64,2}",100000)` | 0.99 | 1.07 | 1.0 | 1.0 |
+| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100000)` | **1.17 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100000)` | **2.1 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumcartesian,"Array{Int64,2}",100)` | 0.94 | 1.0 | 1.0 | 1.0 |
+| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100)` | 1.02 | 1.07 | 1.0 | 1.0 |
+| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100)` | 1.01 | 1.0 | 1.0 | 1.0 |
+| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100000)` | 1.09 | 1.0 | 1.0 | 1.0 |
+| `(:sumcolon,"Array{Int64,2}",100000)` | 0.98 | 0.97 | 1.0 | 1.0 |
+| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100000)` | 1.01 | 1.05 | 1.0 | 1.0 |
+| `(:sumeach,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | **1.2 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100)` | 1.05 | 1.02 | 1.0 | 1.0 |
+| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100000)` | **1.12 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumlinear,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 1.04 | 1.02 | 1.0 | 1.0 |
+| `(:sumvector,"Array{Float32,2}",100000)` | 0.98 | **1.1 {F}** | 1.0 | 1.0 |
+| `(:sumlogical,"BitArray{2}",100)` | 0.95 | 1.07 | 1.0 | 1.0 |
+| `(:sumvector,"Array{Float32,2}",100)` | 0.99 | 1.09 | 1.0 | 1.0 |
+| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100000)` | 1.02 | 0.99 | 1.0 | 1.0 |
+| `(:sumelt,"Array{Int64,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
+| `(:sumcartesian,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | **1.26 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100000)` | 1.01 | 1.07 | 1.0 | 1.0 |
+| `(:sumcolon,"Array{Float32,2}",100000)` | 0.98 | 1.04 | 1.0 | 1.0 |
+| `(:sumcolon,"Array{Float32,2}",100)` | 0.85 | **1.23 {F}** | 1.0 | 1.0 |
+| `(:sumvector,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 1.07 | 1.02 | 1.0 | 1.0 |
+| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100)` | 1.04 | 1.02 | 1.0 | 1.0 |
+| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100)` | 0.98 | 1.03 | 1.0 | 1.0 |
+| `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100)` | **1.13 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100)` | **3.43 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100000)` | 1.01 | 1.05 | 1.0 | 1.0 |
+| `(:sumelt,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | **1.26 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumlinear,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 1.06 | 1.0 | 1.0 | 1.0 |
+| `(:sumcolon,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | **1.36 {F}** | 0.72 | 1.0 | 1.0 |
+| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100)` | 0.87 | **1.2 {F}** | 1.0 | 1.0 |
+| `(:sumeach,"BitArray{2}",100000)` | 1.0 | 1.0 | 1.0 | 1.0 |
+| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100)` | 0.96 | 1.0 | 1.0 | 1.0 |
+| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100)` | **1.2 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100000)` | 1.01 | 1.06 | 1.0 | 1.0 |
+| `(:sumrange,"Array{Int64,2}",100000)` | 1.01 | 1.02 | 1.0 | 1.0 |
+| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100000)` | 1.06 | 0.91 | 1.0 | 1.0 |
+| `(:sumcartesian,"BitArray{2}",100000)` | 0.99 | 1.0 | 1.0 | 1.0 |
+| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100000)` | **1.12 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumvector,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 1.1 | 1.0 | 1.0 | 1.0 |
+| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100000)` | 1.04 | 0.99 | 1.0 | 1.0 |
+| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100000)` | 1.01 | 1.03 | 1.0 | 1.0 |
+| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100)` | **1.12 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumcolon,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 1.06 | 1.0 | 1.0 | 1.0 |
+| `(:sumrange,"Array{Float32,2}",100000)` | 1.02 | 1.04 | 1.0 | 1.0 |
+| `(:sumrange,"Array{Float32,2}",100)` | 0.86 | **1.16 {F}** | 1.0 | 1.0 |
+| `(:sumelt,"BitArray{2}",100000)` | 1.0 | 1.0 | 1.0 | 1.0 |
+| `(:sumlogical,"Array{Int64,2}",100000)` | 1.0 | 1.02 | 1.0 | 1.0 |
+| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100)` | 0.98 | 1.1 | 1.0 | 1.0 |
+| `(:sumvector,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 1.07 | 1.01 | 1.0 | 1.0 |
+| `(:sumrange,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | **1.4 {F}** | 0.69 | 1.0 | 1.0 |
+| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100)` | 0.97 | 1.08 | 1.0 | 1.0 |
+| `(:sumeach,"BitArray{2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
+| `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100000)` | 1.04 | 1.0 | 1.0 | 1.0 |
+| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100)` | **1.32 {F}** | 0.87 | 1.0 | 1.0 |
+| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100000)` | 1.0 | 1.08 | 1.0 | 1.0 |
+| `(:sumcolon,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 0.76 | **1.16 {F}** | 1.0 | 1.0 |
+| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100000)` | 1.02 | 1.02 | 1.0 | 1.0 |
+| `(:sumcartesian,"BitArray{2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
+| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
+| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100000)` | 1.06 | 1.01 | 1.0 | 1.0 |
+| `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100)` | **1.19 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100000)` | **1.31 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100000)` | 1.03 | 1.01 | 1.0 | 1.0 |
+| `(:sumlogical,"Array{Float32,2}",100000)` | 1.0 | 1.09 | 1.0 | 1.0 |
+| `(:sumlogical,"Array{Float32,2}",100)` | 0.94 | 1.09 | 1.0 | 1.0 |
+| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100)` | **1.58 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100000)` | 1.06 | 0.94 | 1.0 | 1.0 |
+| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100000)` | **1.17 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumrange,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 1.01 | 1.05 | 1.0 | 1.0 |
+| `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100)` | **1.25 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumlogical,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 1.05 | 0.99 | 1.0 | 1.0 |
+| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100)` | 0.97 | 1.06 | 1.0 | 1.0 |
+| `(:sumelt,"BitArray{2}",100)` | **1.19 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumlinear,"Array{Int64,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
+| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100000)` | 1.04 | 1.0 | 1.0 | 1.0 |
+| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100)` | **1.25 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100000)` | 1.0 | 1.04 | 1.0 | 1.0 |
+| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100)` | **1.24 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100000)` | 1.0 | 1.09 | 1.0 | 1.0 |
+| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100)` | **1.18 {F}** | 0.93 | 1.0 | 1.0 |
+| `(:sumrange,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 1.0 | 1.01 | 1.0 | 1.0 |
+| `(:sumlinear,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 0.95 | 1.01 | 1.0 | 1.0 |
+| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100)` | 1.0 | 1.06 | 1.0 | 1.0 |
+| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
+| `(:sumlogical,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 1.09 | 1.0 | 1.0 | 1.0 |
+| `(:sumeach,"Array{Int64,2}",100000)` | **1.21 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100)` | 0.99 | 1.06 | 1.0 | 1.0 |
+| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100000)` | 1.04 | 1.02 | 1.0 | 1.0 |
+| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100000)` | 1.03 | 1.01 | 1.0 | 1.0 |
+| `(:sumvector,"Array{Int64,2}",100)` | 0.99 | 1.05 | 1.0 | 1.0 |
+| `(:sumcartesian,"Array{Int64,2}",100000)` | 1.02 | 1.0 | 1.0 | 1.0 |
+| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100)` | **1.15 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100000)` | **1.13 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100000)` | 1.09 | 0.98 | 1.0 | 1.0 |
+| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100)` | 0.98 | 1.01 | 1.0 | 1.0 |
+| `(:sumlogical,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 1.08 | 1.0 | 1.0 | 1.0 |
+| `(:sumlinear,"BitArray{2}",100000)` | 0.99 | 1.0 | 1.0 | 1.0 |
+| `(:sumcolon,"Array{Int64,2}",100)` | 0.78 | **1.13 {F}** | 1.0 | 1.0 |
+| `(:sumeach,"Array{Float32,2}",100000)` | 1.0 | 1.0 | 1.0 | 1.0 |
+| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100000)` | **1.21 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumeach,"Array{Float32,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
+| `(:sumvector,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 1.06 | 1.01 | 1.0 | 1.0 |
+| `(:sumelt,"Array{Int64,2}",100000)` | 1.0 | 1.0 | 1.0 | 1.0 |
+| `(:sumcartesian,"Array{Float32,2}",100000)` | 0.89 | 1.0 | 1.0 | 1.0 |
+| `(:sumcartesian,"Array{Float32,2}",100)` | 0.97 | 1.0 | 1.0 | 1.0 |
+| `(:sumeach,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | **1.28 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100)` | **1.15 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100000)` | 1.03 | 1.04 | 1.0 | 1.0 |
+| `(:sumcolon,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | **1.41 {F}** | 0.76 | 1.0 | 1.0 |
+| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100000)` | **1.22 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100000)` | **2.19 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumcartesian,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | **1.28 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100)` | **1.13 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100)` | 0.95 | 1.03 | 1.0 | 1.0 |
+| `(:sumelt,"Array{Float32,2}",100000)` | 1.0 | 1.0 | 1.0 | 1.0 |
+| `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100000)` | 1.0 | 1.0 | 1.0 | 1.0 |
+| `(:sumelt,"Array{Float32,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
+| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100)` | 1.02 | 1.06 | 1.0 | 1.0 |
+| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100000)` | **1.21 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100000)` | 1.02 | 1.04 | 1.0 | 1.0 |
+| `(:sumvector,"BitArray{2}",100000)` | 1.03 | 1.05 | 1.0 | 1.0 |
+| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100000)` | **1.29 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumeach,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | **1.21 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumrange,"Array{Int64,2}",100)` | 0.96 | **1.11 {F}** | 1.0 | 1.0 |
+| `(:sumlinear,"BitArray{2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
+| `(:sumelt,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | **1.32 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100)` | **1.11 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100)` | 0.98 | 1.07 | 1.0 | 1.0 |
+| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100000)` | **1.12 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumcartesian,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | **1.22 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumcolon,"BitArray{2}",100000)` | 1.04 | 1.0 | 1.0 | 1.0 |
+| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100000)` | 1.05 | 1.0 | 1.0 | 1.0 |
+| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100)` | 0.98 | 1.04 | 1.0 | 1.0 |
+| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100)` | **1.13 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100000)` | 1.06 | 1.0 | 1.0 | 1.0 |
+| `(:sumrange,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | **1.42 {F}** | 0.77 | 1.0 | 1.0 |
+| `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100)` | **3.44 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumeach,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | **1.44 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100000)` | 1.03 | 1.04 | 1.0 | 1.0 |
+| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100)` | **1.13 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumelt,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | **1.22 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumlogical,"Array{Int64,2}",100)` | 0.95 | 1.01 | 1.0 | 1.0 |
+| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100)` | **1.39 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumcartesian,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | **1.36 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100000)` | 0.98 | 1.0 | 1.0 | 1.0 |
+| `(:sumvector,"BitArray{2}",100)` | 1.04 | 1.07 | 1.0 | 1.0 |
+| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100)` | 0.97 | 1.08 | 1.0 | 1.0 |
+| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100000)` | 1.01 | 1.06 | 1.0 | 1.0 |
+| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100000)` | **1.29 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumlogical,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 1.03 | 0.98 | 1.0 | 1.0 |
+| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100)` | **1.4 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumrange,"BitArray{2}",100000)` | 1.01 | 1.07 | 1.0 | 1.0 |
+| `(:sumcolon,"BitArray{2}",100)` | 0.94 | **1.12 {F}** | 1.0 | 1.0 |
+| `(:sumelt,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | **1.56 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100)` | 1.04 | 1.02 | 1.0 | 1.0 |
+| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100000)` | 1.03 | 0.93 | 1.0 | 1.0 |
+| `(:sumlinear,"Array{Int64,2}",100000)` | 1.08 | 1.0 | 1.0 | 1.0 |
+| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100)` | 1.1 | 1.03 | 1.0 | 1.0 |
+| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100)` | 0.97 | 1.08 | 1.0 | 1.0 |
+| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100000)` | **1.22 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100)` | 0.93 | 1.06 | 1.0 | 1.0 |
+| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100000)` | **1.14 {F}** | 1.0 | 1.0 | 1.0 |
+| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100)` | **1.18 {F}** | 0.93 | 1.0 | 1.0 |
+| `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
+| `(:sumlogical,"BitArray{2}",100000)` | 1.04 | 1.0 | 1.0 | 1.0 |
 
