add markdown report for job: jrevels/julia@82f810d vs jrevels/julia@82f810d

--- a/82f810d/82f810d_vs_82f810d.md
+++ b/82f810d/82f810d_vs_82f810d.md
@@ -4,9 +4,9 @@
 
 *Commit(s):* [jrevels/julia@82f810d](https://github.com/jrevels/julia/commit/82f810d79640d2aac0c65f47c929251897bd906d) vs [jrevels/julia@82f810d](https://github.com/jrevels/julia/commit/82f810d79640d2aac0c65f47c929251897bd906d)
 
-*Tag Predicate:* `("eig" || "simd") || "blas"`
+*Tag Predicate:* `"linalg" || "simd"`
 
-*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-181711131)
+*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-182938366)
 
 ## Results
 
@@ -28,14 +28,48 @@ shown below (an empty table means that all benchmark results remained invariant 
 
 | Group ID | Benchmark ID | time | time spent in GC | bytes allocated | number of allocations |
 |----------|--------------|------|------------------|-----------------|-----------------------|
-| `array index sum` | `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",(3,5))` | **1.42** :x: | 1.02 | 1.0 | 1.0 |
-| `blas 1` | `(:dot,1024)` | **1.36** :x: | 0.76 | 1.0 | 1.0 |
-| `blas 2` | `(:trmv,256)` | **0.79** :white_check_mark: | 1.16 | 1.0 | 1.0 |
-| `lapack eig` | `(:realeig,16)` | **1.52** :x: | 1.0 | 1.0 | 1.0 |
-| `simd` | `(:axpy!,"Float32",1000)` | **1.26** :x: | 1.12 | 1.0 | 1.0 |
-| `simd` | `(:axpy!,"Int32",999)` | **0.64** :white_check_mark: | 2.8 | 1.0 | 1.0 |
-| `simd` | `(:conditional_loop!,"Int32",999)` | **0.77** :white_check_mark: | 1.0 | 1.0 | 1.0 |
-| `simd` | `(:conditional_loop!,"Int32",1000)` | **0.79** :white_check_mark: | 1.0 | 1.0 | 1.0 |
+| `array index sum` | `(:sumcartesian,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",(3,5))` | **1.79** :x: | 0.0 | 1.0 | 1.0 |
+| `array index sum` | `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",(3,5))` | **1.7** :x: | 0.21 | 1.0 | 1.0 |
+| `array index sum` | `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",(3,5))` | **1.62** :x: | 0.28 | 1.0 | 1.0 |
+| `array index sum` | `(:sumvector,"Array{Int32,2}",(300,500))` | **0.63** :white_check_mark: | 0.63 | 1.0 | 1.0 |
+| `array index sum` | `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",(300,500))` | **1.54** :x: | Inf | 1.0 | 1.0 |
+| `array index sum` | `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int32,2}",(3,5))` | **1.51** :x: | 0.0 | 1.0 | 1.0 |
+| `array index sum` | `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int32,2}",(300,500))` | **0.62** :white_check_mark: | 0.0 | 1.0 | 1.0 |
+| `array index sum` | `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",(300,500))` | **0.66** :white_check_mark: | 0.0 | 1.0 | 1.0 |
+| `array index sum` | `(:sumvector,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",(3,5))` | **2.51** :x: | Inf | 1.0 | 1.0 |
+| `array index sum` | `(:sumvector,"SubArray{Int32,2,Array{Int32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",(300,500))` | **1.29** :x: | Inf | 1.0 | 1.0 |
+| `blas` | `(:dotu,1024)` | **0.73** :white_check_mark: | Inf | 1.0 | 1.0 |
+| `blas` | `(:gbmv,1024)` | **0.62** :white_check_mark: | 1.0 | 1.0 | 1.0 |
+| `blas` | `(:gemv,1024)` | **0.77** :white_check_mark: | 1.0 | 1.0 | 1.0 |
+| `blas` | `(:nrm2,1024)` | **1.7** :x: | 0.26 | 1.0 | 1.0 |
+| `factorization eig` | `(:eig,"LowerTriangular",16)` | **1.67** :x: | 0.0 | 1.0 | 1.0 |
+| `factorization eig` | `(:eig,"Matrix",16)` | **0.67** :white_check_mark: | 1.0 | 1.0 | 1.0 |
+| `factorization eig` | `(:eigfact,"Bidiagonal",16)` | **1.22** :x: | Inf | 1.0 | 1.0 |
+| `factorization eig` | `(:eigfact,"Matrix",16)` | **1.55** :x: | 1.0 | 1.0 | 1.0 |
+| `factorization schur` | `(:schurfact,"Matrix",16)` | **1.75** :x: | Inf | 1.0 | 1.0 |
+| `simd` | `(:conditional_loop!,"Int32",10)` | **1.63** :x: | 1.0 | 1.0 | 1.0 |
+| `simd` | `(:inner,"Float32",9)` | **0.57** :white_check_mark: | Inf | 1.0 | 1.0 |
+| `simd` | `(:inner,"Float32",10)` | **0.64** :white_check_mark: | Inf | 1.0 | 1.0 |
+| `simd` | `(:inner,"Float32",999)` | **0.64** :white_check_mark: | Inf | 1.0 | 1.0 |
+| `simd` | `(:inner,"Float32",1000)` | **0.65** :white_check_mark: | Inf | 1.0 | 1.0 |
+| `simd` | `(:inner,"Float64",255)` | **0.63** :white_check_mark: | Inf | 1.0 | 1.0 |
+| `simd` | `(:inner,"Float64",256)` | **0.64** :white_check_mark: | Inf | 1.0 | 1.0 |
+| `simd` | `(:inner,"Int64",256)` | **0.8** :white_check_mark: | Inf | 1.0 | 1.0 |
+| `simd` | `(:local_arrays,"Int32",999)` | **0.55** :white_check_mark: | 0.0 | 1.0 | 1.0 |
+| `simd` | `(:local_arrays,"Int64",255)` | **0.53** :white_check_mark: | 0.0 | 1.0 | 1.0 |
+| `simd` | `(:manual_example!,"Float32",999)` | **0.63** :white_check_mark: | Inf | 1.0 | 1.0 |
+| `simd` | `(:manual_example!,"Float32",1000)` | **1.54** :x: | 0.0 | 1.0 | 1.0 |
+| `simd` | `(:manual_example!,"Float64",9)` | **1.64** :x: | 0.0 | 1.0 | 1.0 |
+| `simd` | `(:manual_example!,"Float64",255)` | **1.53** :x: | 0.0 | 1.0 | 1.0 |
+| `simd` | `(:manual_example!,"Float64",256)` | **1.57** :x: | 0.0 | 1.0 | 1.0 |
+| `simd` | `(:manual_example!,"Float64",1000)` | **0.59** :white_check_mark: | Inf | 1.0 | 1.0 |
+| `simd` | `(:sum_reduce,"Int32",255)` | **0.64** :white_check_mark: | Inf | 1.0 | 1.0 |
+| `simd` | `(:two_reductions,"Float32",9)` | **0.54** :white_check_mark: | Inf | 1.0 | 1.0 |
+| `simd` | `(:two_reductions,"Float32",255)` | **1.2** :x: | 0.0 | 1.0 | 1.0 |
+| `simd` | `(:two_reductions,"Int64",9)` | **0.52** :white_check_mark: | Inf | 1.0 | 1.0 |
+| `simd` | `(:two_reductions,"Int64",255)` | **1.6** :x: | 0.0 | 1.0 | 1.0 |
+| `simd` | `(:two_reductions,"Int64",999)` | **0.56** :white_check_mark: | Inf | 1.0 | 1.0 |
+| `simd` | `(:two_reductions,"Int64",1000)` | **0.55** :white_check_mark: | Inf | 1.0 | 1.0 |
 
 ## Version Info
 
@@ -50,19 +84,19 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.3 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (21456.8125 MB free)
-Uptime: 1.1369156e7 sec
-Load Avg:  4.49755859375  3.38818359375  3.3916015625
+Memory: 31.383678436279297 GB (12531.49609375 MB free)
+Uptime: 1.1582628e7 sec
+Load Avg:  4.1875  3.19580078125  3.30078125
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz    5446590 s       1135 s    2936971 s  1124521876 s          2 s
-#2  3501 MHz    4763263 s        142 s    1257544 s  1129150443 s          0 s
-#3  3501 MHz    4129410 s        971 s    1471167 s  1129864750 s          1 s
-#4  3501 MHz    3474169 s        319 s    1202794 s  1131171878 s          0 s
-#5  3501 MHz    2546306 s       3498 s     681898 s  1133366553 s          0 s
-#6  3501 MHz    2159778 s        732 s     677283 s  1133757643 s          0 s
-#7  3501 MHz    2422007 s       1424 s     683401 s  1133439196 s          0 s
-#8  3501 MHz    2132054 s       1010 s     617715 s  1133882052 s          0 s
+#1  3501 MHz    5859184 s       1135 s    3220009 s  1145032472 s          3 s
+#2  3501 MHz    5347947 s        142 s    1500440 s  1149527794 s          0 s
+#3  3501 MHz    4610612 s        971 s    1712089 s  1150364553 s          1 s
+#4  3501 MHz    3898266 s        319 s    1452602 s  1151737703 s          0 s
+#5  3501 MHz    2882819 s       3789 s     945398 s  1154059891 s          0 s
+#6  3501 MHz    2621672 s        732 s     896715 s  1154366329 s          0 s
+#7  3501 MHz    2825727 s       2016 s     922144 s  1154094378 s          0 s
+#8  3501 MHz    2481379 s       1010 s     873942 s  1154576088 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
@@ -82,19 +116,19 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.3 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (21161.9765625 MB free)
-Uptime: 1.1373153e7 sec
-Load Avg:  3.69580078125  3.08544921875  3.00634765625
+Memory: 31.383678436279297 GB (12234.78515625 MB free)
+Uptime: 1.1586855e7 sec
+Load Avg:  4.0263671875  3.0927734375  3.2412109375
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz    5552299 s       1135 s    2995436 s  1124739841 s          2 s
-#2  3501 MHz    4871997 s        142 s    1327319 s  1129344554 s          0 s
-#3  3501 MHz    4218841 s        971 s    1538957 s  1130082111 s          1 s
-#4  3501 MHz    3593156 s        319 s    1262060 s  1131372947 s          0 s
-#5  3501 MHz    2618961 s       3498 s     753769 s  1133610530 s          0 s
-#6  3501 MHz    2241426 s        732 s     746214 s  1133995887 s          0 s
-#7  3501 MHz    2522410 s       1424 s     745524 s  1133666957 s          0 s
-#8  3501 MHz    2216296 s       1010 s     684584 s  1134121933 s          0 s
+#1  3501 MHz    5949288 s       1135 s    3305112 s  1145263298 s          3 s
+#2  3501 MHz    5495124 s        142 s    1572730 s  1149706656 s          0 s
+#3  3501 MHz    4725775 s        971 s    1788416 s  1150570741 s          1 s
+#4  3501 MHz    3996455 s        319 s    1534469 s  1151960356 s          0 s
+#5  3501 MHz    3000670 s       3789 s    1017255 s  1154282512 s          0 s
+#6  3501 MHz    2693168 s        732 s     985992 s  1154618056 s          0 s
+#7  3501 MHz    2923934 s       2016 s     999457 s  1154330706 s          0 s
+#8  3501 MHz    2555116 s       1010 s     961732 s  1154827147 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
@@ -108,9 +142,13 @@ Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz:
 Here's a list of all the benchmark groups executed by this job:
 
 - `array index sum`
-- `blas 1`
-- `blas 2`
-- `blas 3`
-- `lapack eig`
+- `blas`
+- `factorization chol`
+- `factorization eig`
+- `factorization lu`
+- `factorization qr`
+- `factorization schur`
+- `factorization svd`
+- `linalg arithmetic`
 - `problem seismic simulation`
 - `simd`
