--- a/b61f660/b61f660_vs_b61f660.md
+++ b/b61f660/b61f660_vs_b61f660.md
@@ -6,7 +6,7 @@
 
 *Tag Predicate:* `"blas"`
 
-*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-192019867)
+*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-192372557)
 
 ## Results
 
@@ -28,17 +28,13 @@ shown below (an empty table means that all benchmark results remained invariant 
 
 | Group ID | Benchmark ID | time | GC time | memory allocated | number of allocations |
 |----------|--------------|------|---------|------------------|-----------------------|
-| `"blas"` | `("axpy!",1024)` | **0.64** :white_check_mark: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("dot",1024)` | **0.61** :white_check_mark: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("gbmv",1024)` | **0.91** :white_check_mark: | 0.99 | 1.00 | 1.00 |
-| `"blas"` | `("gbmv!",1024)` | **0.91** :white_check_mark: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("gemv!",1024)` | **0.93** :white_check_mark: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("ger!",1024)` | **0.94** :white_check_mark: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("sbmv",1024)` | **0.89** :white_check_mark: | 1.03 | 1.00 | 1.00 |
-| `"blas"` | `("sbmv!",1024)` | **0.85** :white_check_mark: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("syrk!",1024)` | **1.06** :x: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("trmv",1024)` | **0.81** :white_check_mark: | 1.04 | 1.00 | 1.00 |
-| `"blas"` | `("trmv!",1024)` | **0.82** :white_check_mark: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("gbmv!",1024)` | **1.07** :x: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("ger!",1024)` | **1.06** :x: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("symv",1024)` | **1.09** :x: | 1.02 | 1.00 | 1.00 |
+| `"blas"` | `("symv!",1024)` | **1.17** :x: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("syr!",1024)` | **1.12** :x: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("trsv",1024)` | **1.08** :x: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("trsv!",1024)` | **1.09** :x: | 1.00 | 1.00 | 1.00 |
 
 ## Version Info
 
@@ -53,19 +49,19 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (20082.46875 MB free)
-Uptime: 1.3419605e7 sec
-Load Avg:  5.908203125  3.98486328125  1.86767578125
+Memory: 31.383678436279297 GB (20073.37890625 MB free)
+Uptime: 1.3484485e7 sec
+Load Avg:  5.966796875  4.00390625  1.87109375
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   12631999 s       1615 s    4156025 s  1320395170 s          4 s
-#2  3501 MHz    6549502 s        142 s    2231896 s  1331042928 s          0 s
-#3  3501 MHz    5560034 s       1139 s    2663029 s  1331888752 s          1 s
-#4  3501 MHz    4862315 s        319 s    2213900 s  1333498427 s          0 s
-#5  3501 MHz    3569860 s       4070 s    1726717 s  1336149270 s          0 s
-#6  3501 MHz    3191962 s       1003 s    1711171 s  1336590333 s          0 s
-#7  3501 MHz    3452012 s       2031 s    1615125 s  1336379704 s          0 s
-#8  3501 MHz    3635591 s       1226 s    1572124 s  1336331885 s          0 s
+#1  3501 MHz   12788940 s       1615 s    4176542 s  1326697841 s          4 s
+#2  3501 MHz    6563149 s        142 s    2239142 s  1337505626 s          0 s
+#3  3501 MHz    5577619 s       1139 s    2670843 s  1338346005 s          1 s
+#4  3501 MHz    4879595 s        319 s    2221678 s  1339956846 s          0 s
+#5  3501 MHz    3587280 s       4070 s    1734818 s  1342606652 s          0 s
+#6  3501 MHz    3197604 s       1003 s    1712737 s  1343070965 s          0 s
+#7  3501 MHz    3458788 s       2031 s    1615695 s  1342860050 s          0 s
+#8  3501 MHz    3644991 s       1242 s    1572710 s  1342809701 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
@@ -85,19 +81,19 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (20082.96484375 MB free)
-Uptime: 1.3420012e7 sec
-Load Avg:  5.76806640625  4.94189453125  3.017578125
+Memory: 31.383678436279297 GB (20068.3671875 MB free)
+Uptime: 1.3484894e7 sec
+Load Avg:  5.41943359375  4.92138671875  3.02294921875
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   12666302 s       1615 s    4160994 s  1320396572 s          4 s
-#2  3501 MHz    6549502 s        142 s    2231949 s  1331083491 s          0 s
-#3  3501 MHz    5560034 s       1139 s    2663082 s  1331929352 s          1 s
-#4  3501 MHz    4862315 s        319 s    2213951 s  1333539029 s          0 s
-#5  3501 MHz    3569861 s       4070 s    1726734 s  1336189886 s          0 s
-#6  3501 MHz    3191962 s       1003 s    1711175 s  1336631014 s          0 s
-#7  3501 MHz    3452012 s       2031 s    1615125 s  1336420389 s          0 s
-#8  3501 MHz    3635591 s       1226 s    1572124 s  1336372570 s          0 s
+#1  3501 MHz   12823498 s       1615 s    4181430 s  1326699237 s          4 s
+#2  3501 MHz    6563150 s        142 s    2239178 s  1337546388 s          0 s
+#3  3501 MHz    5577619 s       1139 s    2670894 s  1338386768 s          1 s
+#4  3501 MHz    4879595 s        319 s    2221732 s  1339997619 s          0 s
+#5  3501 MHz    3587282 s       4070 s    1734836 s  1342647439 s          0 s
+#6  3501 MHz    3197604 s       1003 s    1712739 s  1343111824 s          0 s
+#7  3501 MHz    3458788 s       2031 s    1615695 s  1342900911 s          0 s
+#8  3501 MHz    3644991 s       1242 s    1572710 s  1342850562 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
