add markdown report for job: jrevels/julia@b61f660 vs jrevels/julia@b61f660

--- a/b61f660/b61f660_vs_b61f660.md
+++ b/b61f660/b61f660_vs_b61f660.md
@@ -6,7 +6,7 @@
 
 *Tag Predicate:* `"blas"`
 
-*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-192372557)
+*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-192379054)
 
 ## Results
 
@@ -28,13 +28,14 @@ shown below (an empty table means that all benchmark results remained invariant 
 
 | Group ID | Benchmark ID | time | GC time | memory allocated | number of allocations |
 |----------|--------------|------|---------|------------------|-----------------------|
-| `"blas"` | `("gbmv!",1024)` | **1.07** :x: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("ger!",1024)` | **1.06** :x: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("symv",1024)` | **1.09** :x: | 1.02 | 1.00 | 1.00 |
-| `"blas"` | `("symv!",1024)` | **1.17** :x: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("syr!",1024)` | **1.12** :x: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("trsv",1024)` | **1.08** :x: | 1.00 | 1.00 | 1.00 |
-| `"blas"` | `("trsv!",1024)` | **1.09** :x: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("gbmv",1024)` | **1.17** :x: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("gbmv!",1024)` | **1.21** :x: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("her!",1024)` | **1.22** :x: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("symv",1024)` | **1.09** :x: | 1.78 | 1.00 | 1.00 |
+| `"blas"` | `("syr!",1024)` | **0.94** :white_check_mark: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("trmv",1024)` | **0.81** :white_check_mark: | 1.03 | 1.00 | 1.00 |
+| `"blas"` | `("trmv!",1024)` | **0.82** :white_check_mark: | 1.00 | 1.00 | 1.00 |
+| `"blas"` | `("trsv!",1024)` | **0.95** :white_check_mark: | 1.00 | 1.00 | 1.00 |
 
 ## Version Info
 
@@ -49,19 +50,19 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (20073.37890625 MB free)
-Uptime: 1.3484485e7 sec
-Load Avg:  5.966796875  4.00390625  1.87109375
+Memory: 31.383678436279297 GB (20066.71875 MB free)
+Uptime: 1.3485679e7 sec
+Load Avg:  5.74658203125  4.28564453125  3.12353515625
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   12788940 s       1615 s    4176542 s  1326697841 s          4 s
-#2  3501 MHz    6563149 s        142 s    2239142 s  1337505626 s          0 s
-#3  3501 MHz    5577619 s       1139 s    2670843 s  1338346005 s          1 s
-#4  3501 MHz    4879595 s        319 s    2221678 s  1339956846 s          0 s
-#5  3501 MHz    3587280 s       4070 s    1734818 s  1342606652 s          0 s
-#6  3501 MHz    3197604 s       1003 s    1712737 s  1343070965 s          0 s
-#7  3501 MHz    3458788 s       2031 s    1615695 s  1342860050 s          0 s
-#8  3501 MHz    3644991 s       1242 s    1572710 s  1342809701 s          0 s
+#1  3501 MHz   12857538 s       1615 s    4186763 s  1326738258 s          4 s
+#2  3501 MHz    6563152 s        142 s    2239263 s  1337624673 s          0 s
+#3  3501 MHz    5577620 s       1139 s    2671014 s  1338465057 s          1 s
+#4  3501 MHz    4879596 s        319 s    2221819 s  1340075951 s          0 s
+#5  3501 MHz    3587283 s       4070 s    1734900 s  1342725757 s          0 s
+#6  3501 MHz    3197606 s       1003 s    1712740 s  1343190289 s          0 s
+#7  3501 MHz    3458789 s       2031 s    1615696 s  1342979376 s          0 s
+#8  3501 MHz    3644991 s       1242 s    1572710 s  1342929032 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
@@ -81,19 +82,19 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (20068.3671875 MB free)
-Uptime: 1.3484894e7 sec
-Load Avg:  5.41943359375  4.92138671875  3.02294921875
+Memory: 31.383678436279297 GB (20066.0703125 MB free)
+Uptime: 1.3486087e7 sec
+Load Avg:  5.93359375  5.119140625  3.86962890625
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   12823498 s       1615 s    4181430 s  1326699237 s          4 s
-#2  3501 MHz    6563150 s        142 s    2239178 s  1337546388 s          0 s
-#3  3501 MHz    5577619 s       1139 s    2670894 s  1338386768 s          1 s
-#4  3501 MHz    4879595 s        319 s    2221732 s  1339997619 s          0 s
-#5  3501 MHz    3587282 s       4070 s    1734836 s  1342647439 s          0 s
-#6  3501 MHz    3197604 s       1003 s    1712739 s  1343111824 s          0 s
-#7  3501 MHz    3458788 s       2031 s    1615695 s  1342900911 s          0 s
-#8  3501 MHz    3644991 s       1242 s    1572710 s  1342850562 s          0 s
+#1  3501 MHz   12892043 s       1615 s    4191737 s  1326739632 s          4 s
+#2  3501 MHz    6563152 s        142 s    2239310 s  1337665411 s          0 s
+#3  3501 MHz    5577624 s       1139 s    2671088 s  1338505805 s          1 s
+#4  3501 MHz    4879596 s        319 s    2221872 s  1340116726 s          0 s
+#5  3501 MHz    3587284 s       4070 s    1734916 s  1342766542 s          0 s
+#6  3501 MHz    3197609 s       1003 s    1712746 s  1343231142 s          0 s
+#7  3501 MHz    3458789 s       2031 s    1615697 s  1343020234 s          0 s
+#8  3501 MHz    3644991 s       1242 s    1572710 s  1342969892 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
